# PacMan

./: .gitignore  CMakeLists.txt  README.md  build.sh  coordinate.h  entity.cpp  entity.h  game.cpp  game.h  ghost.cpp  ghost.h  interface.cpp  interface.h  pacman.cpp  pacman.h  person.cpp  person.h  player.cpp  player.h  scores.txt  stats.cpp  stats.h  toDo.md
Rapport/: Lucas_Cheekhooree.md
inc/: coordinate.hpp  entity.hpp  game.hpp  ghost.hpp  interface.hpp  pacman.h  person.hpp  player.hpp  stats.hpp
src/: CMakeLists.txt  entity.cpp  game.cpp  ghost.cpp  interface.cpp  pacman.cpp  person.cpp  player.cpp  stats.cpp
